--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 node_modules
 .next
+
+# misc
+.DS_Store
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 out
 build
 dist
