--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   },
   "dependencies": {
     "@babel/register": "^7.12.10",
+    "@faceless-ui/css-grid": "^1.0.9",
+    "@faceless-ui/modal": "^1.1.8",
+    "@faceless-ui/window-info": "^2.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jss-global": "^3.0.0",
     "next": "^12.0.4",
     "payload": "^0.13.2",
     "react": "^17.0.2",
-    "sass": "^1.42.0",
+    "react-jss": "^10.9.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
