--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/register": "^7.12.10",
     "@faceless-ui/css-grid": "^1.0.9",
     "@faceless-ui/modal": "^1.1.8",
+    "@faceless-ui/mouse-info": "^1.2.6",
+    "@faceless-ui/scroll-info": "^1.2.7",
     "@faceless-ui/window-info": "^2.0.3",
     "color": "^4.2.3",
     "dotenv": "^8.2.0",
@@ -31,11 +33,14 @@
     "payload": "^0.13.2",
     "react": "^17.0.2",
     "react-jss": "^10.9.0",
+    "react-toastify": "^9.0.1",
+    "react-transition-group": "^4.4.2",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@trbl/eslint-config": "^1.2.4",
     "@types/express": "^4.17.11",
+    "@types/html-validator": "^5.0.3",
     "@types/react": "^16.9.56",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
@@ -47,6 +52,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "husky": "^7.0.4",
     "ts-node": "^9.1.1"
   }
 }
